Make Figures nicer, should be done now

--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -13,7 +13,7 @@ The full source code is available in the project's repository\footnote{\url{http
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics{graphics/Architecture}
+  \includegraphics{graphics/dependencies}
   \caption{An overview of the frameworks, libraries and APIs the presented software depends upon.}
 \end{figure}
 
@@ -23,7 +23,7 @@ The implementation was built with C++ and OpenGL. It uses \textit{gloperate}\foo
 \section{Rendering Pipeline Overview}
 
 \begin{figure}[h]
-    \includegraphics[width=\textwidth]{graphics/rendering_pipeline_overview2}
+    \includegraphics[width=\textwidth]{graphics/rendering_pipeline_overview}
     \caption{Rendering pipeline overview. The global illumination section is a simplified version of \Cref{fig:GIPipelineConcept}. The RSM rendering does not fully belong to the global illumination section, since it both provides a conventional shadow map for direct lighting, as well as additional information to form a RSM for VPL sampling.}
     \label{fig:RenderingPipelineOverview}
 \end{figure}
