--- a/chap-introductionGI.tex
+++ b/chap-introductionGI.tex
@@ -120,8 +120,9 @@ In order to better understand the next section discussing the current research a
 \end{description}%
 %
 Note that not all techniques implement all of these steps. For instance, performing direct lighting and a final gathering step while omitting the light propagation step is sufficient for simulating one indirect bounce. Brute-force ray-tracing can be done by simulating only the light propagation step, and light propagation volumes (\Cref{sec:intro:gi:previousWork:lpv}) omit the final gathering step.
-\\
-\\
+
+\vspace{\baselineskip}
+\noindent
 There are two more essential design decisions to be made:
 
 \begin{description}
