--- a/chap-conclusion.tex
+++ b/chap-conclusion.tex
@@ -6,11 +6,11 @@
 
 In this thesis we have presented a rendering system that simulates global illumination at real-time framerates. It takes only a few milliseconds for computing indirect lighting, making it suitable for use in real-time applications on today's hardware.
 
-Imperfect shadow maps have been implemented and extended by a high-quality postprocessing. They show improved results compared to conventional point splatting, but the resulting quality is limited by the input data, a sparse set of points representing the scene. Using compute shaders for rendering single-pixel points into multiple shadow maps is a clear efficiency gain compared to using geometry shaders.
+In addition to imperfect shadow maps rendered with splatting, a second renderer based on compute shaders has been implemented. With the flexibility provided by compute shaders, it is able to render a high amount of points more efficiently compared to the splat renderer, which relies on geometry shaders. Extended with a high-quality postprocessing, it renders shadow maps of noticeable higher quality than the splat renderer, but the resulting quality is limited by the input data, a randomly selected and sparse set of points representing the scene. Several  failure cases have been identified where the presented implementation generates artifacts clearly visible even to the untrained eye.
 
-Performing interleaved sampling using compute shaders instead of splitting buffers seems to be a definitive improvement. While we have not made an explicit comparison, its near-perfect efficiency, ease of implementation, and the fact that it requires no additional memory make it the obvious choice when compute shaders are available on the given platform.
+Interleaved shading has traditionally been performed by the means of several shader passes, which split a buffer into several smaller ones, perform processing on them, and merge these buffers again. This thesis has presented an implementation that is integrated into the final gathering shader, making splitting and merging buffers obsolete while still processing the workload cache-coherently. Its near-perfect efficiency, ease of implementation, and the fact that it requires no additional memory make this implementation the obvious choice when compute shaders are available on the given platform.
 
-Clustered deferred shading has been shown to have a relatively high overhead and thus is not the perfect candidate for light culling in a global illumination context using many-light methods. There are extensions, however, that could improve its culling efficiency to the point where it causes no slowdown in the worst case. Tiled deferred shading, on the other hand, is a clear performance win and again, rather easy to implement, but limited in its maximum culling efficiency.
+Two light culling techniques well-known in the video games industry, tiled and clustered deferred shading, have been applied to many-light global illumination. While tiled deferred shading's simplicity allowed for a compact implementation integrated into the final gathering shader, clustered deferred shading promised higher culling efficiency at the expense of higher overhead. The results have shown this overhead to be not worth the gains, making clustered deferred shading not the perfect candidate for light culling in a global illumination context using many-light methods. There are extensions, however, that could improve its culling efficiency to the point where it causes no slowdown in the worst case. Tiled deferred shading, on the other hand, is a clear performance win and again, rather easy to implement, but limited in its maximum culling efficiency.
 
 
 Looking forward, going beyond random point sampling for creating imperfect shadow maps is desirable, since the randomness is limiting their quality. The implementation of more advanced surface reconstruction techniques, starting with the full extent of the algorithm presented by \citet{Marroquim:2007:reconstruction}, would likely further enhance the ISM's quality.
