--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -46,7 +46,15 @@ Following the RSM generation, a compute shader samples the RSM in a regular patt
 \section{ISM Rendering}
 \label{sec:impl:ismRendering}
 
-For rendering imperfect shadow maps, a set of points is first generated from the scene geometry. This process is detailed in the next subsection. Subsequently, for each imperfect shadow map a random subset of points is chosen and rendered using a paraboloid projection. To this end, two different approaches, the splat and single-pixel renderer, have been presented in the previous chapter. Their implementation is described in \Cref{sec:impl:splatting,sec:impl:singlePixelRendering}. Subsequently, the pull-push postprocessing required by the single-pixel renderer is detailed.
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics{graphics/ism_pipeline}
+  \caption{Detailed pipeline of the ISM rendering process.}
+  \label{fig:impl:ismRenderingPipeline}
+\end{figure}
+
+Rendering imperfect shadow maps consists of several sub-stages; an overview is provided by \Cref{fig:impl:ismRenderingPipeline}. First, a set of points is generated from the scene geometry. This process is detailed in the next subsection. Subsequently, for each imperfect shadow map a random subset of points is chosen and rendered using a paraboloid projection. To this end, two different approaches, the splat and single-pixel renderer, have been presented in the previous chapter. Their implementation is described in \Cref{sec:impl:splatting,sec:impl:singlePixelRendering}. Subsequently, the pull-push postprocessing required by the single-pixel renderer is detailed.
 
 \subsection{Point Generation}
 \label{sec:impl:pointGeneration}
